--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>facebook4j</groupId>
   <artifactId>facebook4j-core</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>facebook4j-core</name>
   <url>http://maven.apache.org</url>
