--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -187,6 +187,14 @@
         </configuration>
         <version>2.4.3</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.15</version>
+        <configuration>
+          <excludedGroups>facebook4j.junit.category.RealAPITests</excludedGroups>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
