--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -246,6 +246,24 @@
           <excludedGroups>facebook4j.junit.category.RealAPITests</excludedGroups>
         </configuration>
       </plugin>
+
+      <!-- for Coveralls -->
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>2.2.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <format>xml</format>
+          <maxmem>256m</maxmem>
+          <aggregate>true</aggregate>
+          <check/>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
