Delete app info from .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ cache:
   directories:
   - $HOME/.m2
 before_script:
-  - echo "debug=false" >> facebook4j-core/src/test/resources/test.properties &&  echo "oauth.appId=455234471172700" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.appSecret=87fe177ffa757380554a3317448d1f50" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.accessToken=access_token" >> facebook4j-core/src/test/resources/test.properties
+  - echo "debug=false" >> facebook4j-core/src/test/resources/test.properties &&  echo "oauth.appId=1" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.appSecret=1" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.accessToken=access_token" >> facebook4j-core/src/test/resources/test.properties
 after_success:
   - mvn -pl facebook4j-core clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:cobertura
