--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -79,15 +79,6 @@
 
   <profiles>
     <profile>
-      <id>release-sign-artifacts</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-    </profile>
-    <profile>
       <id>jenkins</id>
       <activation>
         <property>
@@ -131,10 +122,12 @@
     <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.1</version>
-      </plugin>
+		<artifactId>maven-release-plugin</artifactId>
+		<version>2.5</version>
+		<configuration>
+			<goals>deploy</goals>
+		</configuration>
+	 </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
