--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -121,14 +121,8 @@
   <build>
     <defaultGoal>install</defaultGoal>
     <plugins>
-      <plugin>
-		<artifactId>maven-release-plugin</artifactId>
-		<version>2.5</version>
-		<configuration>
-			<goals>deploy</goals>
-		</configuration>
-	 </plugin>
-      <plugin>
+    
+     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -138,6 +132,15 @@
         </configuration>
         <version>2.3.2</version>
       </plugin>
+      <plugin>
+		<artifactId>maven-release-plugin</artifactId>
+		<version>2.5</version>
+		<configuration>
+			<goals>deploy</goals>
+			<autoversionsubmodules>true</autoversionsubmodules>
+		</configuration>
+	 </plugin>
+     
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
