--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gauge.facebook4j</groupId>
   <artifactId>facebook4j-core</artifactId>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.3.2</version>
   <packaging>jar</packaging>
   <name>facebook4j-core</name>
   <description>A Java library for the Facebook Graph API</description>
