--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.facebook4j</groupId>
   <artifactId>facebook4j-core</artifactId>
-  <version>2.4.8-SNAPSHOT</version>
+  <version>2.4.8</version>
   <packaging>jar</packaging>
   <name>facebook4j-core</name>
   <description>A Java library for the Facebook Graph API</description>
@@ -18,7 +18,7 @@
     <url>https://github.com/roundrop/facebook4j</url>
     <connection>scm:git:git://github.com/roundrop/facebook4j.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/roundrop/facebook4j.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>2.4.8</tag>
   </scm>
   <developers>
     <developer>
