--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.facebook4j</groupId>
+	<groupId>com.gauge.facebook4j</groupId>
 	<artifactId>facebook4j</artifactId>
 	<version>2.3.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
