--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	</scm>
 	<developers>
 		<developer>
-			<id>roundrop</id>
+			<id>felipeAndrade0918</id>
 			<name>Felipe Andrade</name>
 			<roles>
 				<role>developer</role>
