--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -23,7 +23,7 @@
 	</scm>
 	<developers>
 		<developer>
-			<id>roundrop</id>
+			<id>felipeAndrade0918</id>
 			<name>Felipe Andrade</name>
 			<roles>
 				<role>developer</role>
