--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: java
-addons:
-  apt:
-    packages:
-      - openjdk-6-jdk
-jdk:
-  - openjdk6
-cache:
-  directories:
-  - $HOME/.m2
+env:
+  global:
+    - TRAVIS_JDK=zulu@1.6.103
+    - JABBA_HOME=/home/travis/.jabba
+before_install:
+  - curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | bash && . ~/.jabba/jabba.sh
+install:
+  - $JABBA_HOME/bin/jabba install $TRAVIS_JDK && export JAVA_HOME="$JABBA_HOME/jdk/$TRAVIS_JDK" && export PATH="$JAVA_HOME/bin:$PATH" && java -Xmx32m -version
 before_script:
+  - unset _JAVA_OPTIONS
   - echo "debug=false" >> facebook4j-core/src/test/resources/test.properties &&  echo "oauth.appId=1" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.appSecret=1" >> facebook4j-core/src/test/resources/test.properties && echo "oauth.accessToken=access_token" >> facebook4j-core/src/test/resources/test.properties
 after_success:
   - ./mvnw -pl facebook4j-core clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:cobertura
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.jabba/jdk
