--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.facebook4j</groupId>
   <artifactId>facebook4j-core</artifactId>
-  <version>2.4.13-SNAPSHOT</version>
+  <version>2.4.13-dk8996-2</version>
   <packaging>jar</packaging>
   <name>facebook4j-core</name>
   <description>A Java library for the Facebook Graph API</description>
@@ -49,17 +49,9 @@
   </mailingLists>
   <distributionManagement>
     <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Nexus Release Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        <id>internal</id>
+        <url>file://${project.build.directory}/mvn-repo</url>
     </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Nexus Snapshots Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
   </distributionManagement>
 
   <dependencies>
